# exec-sandbox

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: runs-on.yml
guest-agent/: Cargo.toml  Makefile
guest-agent/src/: connection.rs  constants.rs  error.rs  file_io.rs  init.rs  main.rs  oom_guard.rs  packages.rs  types.rs  validation.rs
guest-agent/src/repl/: execute.rs  mod.rs  spawn.rs  wrappers.rs
guest-agent/src/repl/scripts/: js_repl.mjs  python_repl.py  shell_repl.sh
gvproxy-wrapper/: Makefile  go.mod  go.sum  main.go
images/: init-wrapper.sh  minimal-init.sh  network-init.start
scripts/: benchmark_burst.py  benchmark_density.py  benchmark_latency.py  benchmark_optimizer.py  build-guest-agent.sh  build-images.sh  build-initramfs.sh  build-kernel.sh  build-qcow2.sh  build-qemu.sh  build-tiny-init.sh  build_package_catalogs.py  ci-diagnose.sh  ci-resource-monitor.sh  ci_diagnose.py  extract-kernel.sh  extract-vmlinux.sh  test-initramfs-boot.sh  test-initramfs-full.sh  test_admission_load.py  upgrade-versions.sh
tests/: conftest.py  cpu_helpers.py  test_admission.py  test_aio_utils.py  test_asset_downloader.py  test_assets.py  test_balloon_client.py  test_balloon_integration.py  test_bun_ffi_security.py  test_cgroup.py  test_cli.py  test_config.py  test_consume_stream.py  test_dask_compatibility.py  test_device_security.py  test_disk_snapshot_manager.py  test_dns_filter.py  test_dns_filtering.py  test_dns_resolv_hijack.py  test_ech_proxy_behavior.py  test_env_var_security.py  test_etc_hardening.py  test_execution_edge_cases.py  test_file_io_buffers.py  test_file_io_edge_cases.py  test_file_io_integrity.py  test_file_io_security.py  test_file_io_streaming.py  (+44 more)
tiny-init/: Cargo.toml  Makefile
tiny-init/src/: device.rs  main.rs  sys.rs  zram.rs
(+58 files in other folders)
