[package]
name = "guest-agent"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Lightweight async guest agent for QEMU microVMs"
repository = "https://github.com/dualeai/exec-sandbox"
keywords = ["qemu", "microvm", "sandbox"]
categories = ["virtualization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "io-util",
    "net",
    "fs",
    "process",
    "signal",
    "time",
    "sync",
] }
libc = "0.2" # For PID 1 zombie reaping (waitpid)
base64 = "0.22" # For file I/O content encoding
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
rstest = "0.25"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols
panic = "abort"   # PID 1 — unwinding is useless
