[package]
name = "tiny-init"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Minimal init for QEMU microVMs - replaces busybox+shell init"
repository = "https://github.com/dualeai/exec-sandbox"
keywords = ["qemu", "microvm", "init", "sandbox"]
categories = ["virtualization"]

[dependencies]
libc = "0.2"

[dev-dependencies]
serial_test = "3"
proptest = "1"

[profile.release]
opt-level = "z"       # Optimize for size
lto = "thin"          # Thin LTO — cross-crate optimisation, parallelised across codegen units (default 16)
strip = true          # Strip symbols
panic = "abort"       # Abort on panic (smaller binary, no unwinding)
overflow-checks = false  # Disable overflow checks (~5% smaller binary)
